--- a/Documentation/tutorial-components.html
+++ b/Documentation/tutorial-components.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="apple-touch-icon"
-      sizes="76x76"
-      href="assets/img/favicon.png"
-    />
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/favicon.png" />
     <link rel="icon" type="image/png" href="assets/img/favicon.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Tutorial Components - NextJS Material Kit by Creative Tim</title>
@@ -56,7 +52,10 @@
             <span class="icon-bar bar2"></span>
             <span class="icon-bar bar3"></span>
           </button>
-          <a href="https://www.creative-tim.com?ref=njsmk-static-docs" target="_blank">
+          <a
+            href="https://www.creative-tim.com?ref=njsmk-static-docs"
+            target="_blank"
+          >
             <div class="logo-container">
               <div class="logo">
                 <img src="assets/img/new_logo.png" alt="Creative Tim Logo" />
@@ -90,12 +89,12 @@
     </nav>
     <div
       class="page-header header-filter"
-      style="background-image: url('assets/img/cover.jpeg');"
+      style="background-image: url('assets/img/cover.jpeg')"
     >
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center">
-            <h1 class="title ">NextJS Material Kit</h1>
+            <h1 class="title">NextJS Material Kit</h1>
             <h4 class="title">Tutorial and Components</h4>
             <h5 class="description">v1.2.0</h5>
             <a
@@ -113,7 +112,10 @@
         <nav class="pull-left">
           <ul>
             <li>
-              <a href="https://www.creative-tim.com?ref=njsmk-static-docs" target="_blank">
+              <a
+                href="https://www.creative-tim.com?ref=njsmk-static-docs"
+                target="_blank"
+              >
                 Creative Tim
               </a>
             </li>
@@ -126,10 +128,18 @@
               </a>
             </li>
             <li>
-              <a href="http://blog.creative-tim.com?ref=njsmk-static-docs" target="_blank"> Blog </a>
+              <a
+                href="http://blog.creative-tim.com?ref=njsmk-static-docs"
+                target="_blank"
+              >
+                Blog
+              </a>
             </li>
             <li>
-              <a href="https://www.creative-tim.com/license?ref=njsmk-static-docs" target="_blank">
+              <a
+                href="https://www.creative-tim.com/license?ref=njsmk-static-docs"
+                target="_blank"
+              >
                 Licenses
               </a>
             </li>
@@ -183,7 +193,7 @@
     var fixed_section;
     var floating = false;
 
-    $().ready(function() {
+    $().ready(function () {
       suggestions_distance = $("#suggestions").offset();
       pay_height = $(".fixed-section").outerHeight();
 
